syntax="proto3";
//
message DecompileRequest {  
 string qualifiedClassName=1;
 string methodName=2;
}
